# thirdparty-ceres

./: .gitignore  CAMD_LICENSE  CCOLAMD_LICENSE  CERES_LICENSE  CMakeLists.txt  COLAMD_LICENSE  README.md  build.gradle  merge.gradle  publish.gradle  settings.gradle  vcpkg.json
.github/workflows/: main.yml
overlayPorts/blas/: portfile.cmake  vcpkg.json
overlayPorts/lapack/: portfile.cmake  vcpkg.json
